Added watch page

--- a/Netflix.Frontend/Pages/Home.razor
+++ b/Netflix.Frontend/Pages/Home.razor
@@ -19,9 +19,13 @@
     <div class="banner--fadeBottom"></div>
 </header>
 
-<NetflixOriginals/>
-<TrendingNow/>
-<MostWatchedHorror/>
+<div>
+    <UserWatchHistoryBase />
+</div>
+
+<div>
+    <MostWatchedHorror />
+</div>
 
 <script>
     const nav = document.getElementById('nav');
