Added new pages

--- a/Netflix.Frontend/Pages/Home.razor
+++ b/Netflix.Frontend/Pages/Home.razor
@@ -6,15 +6,15 @@
 <!-- header -->
 <header class="banner">
     <div class="banner__contents">
-        <h1 class="banner__title">Narcos</h1>
+        <img style="width:400px; height:155px" src="https://i.imgur.com/0YCMbxg.png" alt="" href="/" />
+        <h6 class="banner__title">Season 2 now available</h6>
+        <p style="width:500px;">
+            In the second season, notorious drug kingpin Pablo Escobar is on the run, with the Colombian authorities in relentless pursuit -- and determined to put an end to his illegal activities.
+        </p>
         <div class="banner__buttons">
             <button class="banner__button">Play</button>
             <button class="banner__button">My List</button>
         </div>
-        <h1 class="banner__description">
-            To carry out the biggest heist in history, a mysterious man called The Professor recruits
-            a band of eight robbers who have a single characteristic: n...
-        </h1>
     </div>
     <div class="banner--fadeBottom"></div>
 </header>
