--- a/Netflix.Frontend/Layout/Navigation.razor.css
+++ b/Netflix.Frontend/Layout/Navigation.razor.css
@@ -1,721 +1,1 @@
-﻿a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    margin: 0;
-    padding: 0;
-    vertical-align: baseline
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block
-}
-
-body {
-    line-height: 1
-}
-
-ol, ul {
-    list-style: none
-}
-
-blockquote, q {
-    quotes: none
-}
-
-    blockquote:after, blockquote:before, q:after, q:before {
-        content: "";
-        content: none
-    }
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0
-}
-
-body {
-    background: #221f1f;
-    color: #fff;
-    font-family: Lato,sans-serif
-}
-
-.TitleList .Title, h2 {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 1.4;
-    margin-bottom: 1em
-}
-
-p {
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 1.6;
-    margin-bottom: 1em
-}
-
-a {
-    color: inherit !important;
-    text-decoration: none !important
-}
-
-#app {
-    display: grid;
-    grid-template-areas: "main" "footer";
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr auto;
-    min-height: 100vh
-}
-
-    #app .main-wrapper {
-        grid-area: main
-    }
-
-    #app footer {
-        grid-area: footer
-    }
-
-.Header {
-    background: -webkit-linear-gradient(top,#000,transparent);
-    background: linear-gradient(180deg,#000 0,transparent);
-    box-sizing: border-box;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a6000000",endColorstr="#00000000",GradientType=0);
-    flex-direction: row;
-    gap: 3rem;
-    justify-content: flex;
-    left: 0;
-    padding: 40px;
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    z-index: 5
-}
-
-    .Header .Navigation {
-        flex-grow: 1
-    }
-
-    .Header .SearchContainer {
-        order: 1
-    }
-
-    .Header a[href="/profile"] {
-        order: 2
-    }
-
-.Logo {
-    height: 41px;
-    -webkit-transition: margin .125s ease;
-    transition: margin .125s ease;
-    width: 151px
-}
-
-    .Logo svg {
-        -webkit-transform: scale(.5);
-        transform: scale(.5);
-        -webkit-transform-origin: 0 0;
-        transform-origin: 0 0
-    }
-
-        .Logo svg path {
-            fill: #e50914;
-            -webkit-transition: fill .125s ease;
-            transition: fill .125s ease
-        }
-
-    .Logo:hover {
-        cursor: pointer;
-        margin-top: 2px
-    }
-
-        .Logo:hover svg path {
-            fill: #fff !important
-        }
-
-.Navigation ul {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    height: 37px;
-    padding: 0 10px;
-}
-
-    .Navigation ul li {
-        border-radius: 3px;
-        font-size: 14px;
-        font-weight: 400;
-        padding: 7px 10px;
-        -webkit-transition: background .125s ease;
-        transition: background .125s ease
-
-    }
-
-        .Navigation ul li a {
-            color: inherit;
-            text-decoration: none
-        }
-
-        .Navigation ul li:hover {
-            background: #e50914;
-            cursor: pointer
-        }
-
-.Button {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-align-items: center;
-    align-items: center;
-    background: transparent;
-    border: 2px solid hsla(60,17%,95%,.2);
-    border-radius: 44px;
-    box-sizing: border-box;
-    color: #fff;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    font-size: 14px;
-
-    font-weight: 600;
-    height: 44px;
-    -webkit-justify-content: center;
-    justify-content: center;
-    padding: 20px;
-    text-decoration: none;
-    -webkit-transition: border .125s ease,background .125s ease;
-    transition: border .125s ease,background .125s ease
-}
-
-    .Button:hover {
-        border: 2px solid #f5f5f1
-    }
-
-    .Button[data-primary=true] {
-        border: 2px solid #e50914
-    }
-
-        .Button[data-primary=true]:hover {
-            background: #e50914
-        }
-
-footer {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    gap: .5rem;
-    justify-content: center;
-    max-width: 100%;
-    padding-bottom: 1rem
-}
-
-    footer .text-lightgray {
-        color: #aaa
-    }
-
-    footer img#smapiot-logo {
-        left: -2px;
-        position: relative;
-        top: 4px
-    }
-
-    footer a:hover {
-        border-bottom: 1px dashed gray
-    }
-
-    footer .copyright {
-        font-size: .7rem;
-        margin-left: -5px
-    }
-
-.UserProfile {
-    margin-left: auto
-}
-
-    .UserProfile .User {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex
-    }
-
-        .UserProfile .User .image {
-            border-radius: 44px;
-            margin-left: 10px;
-            overflow: hidden;
-            width: 44px;
-            height: 44px;
-            box-sizing: border-box;
-            border: 3px solid transparent;
-            -webkit-transition: border .125s ease;
-            transition: border .125s ease
-        }
-
-            .UserProfile .User .image img {
-                width: 100%;
-                display: block
-            }
-
-            .UserProfile .User .image svg {
-                width: 100%;
-                height: 100%;
-                display: block
-            }
-
-        .UserProfile .User .name {
-            -webkit-box-align: center;
-            -webkit-align-items: center;
-            -ms-flex-align: center;
-            align-items: center;
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            font-size: 18px;
-            font-weight: 300;
-            height: 44px
-        }
-
-        .UserProfile .User:hover {
-            cursor: pointer
-        }
-
-            .UserProfile .User:hover .image {
-                border: 3px solid #e50914
-            }
-
-    .UserProfile .UserProfile-menu {
-        display: none
-    }
-
-.ProfilePage {
-    margin: 10rem 5rem 0;
-    color: #6d6d6d;
-    text-align: center;
-    opacity: 0;
-    animation: fade-in .3s ease .2s 1 forwards
-}
-
-    .ProfilePage h1 {
-        color: #fff;
-        font-size: 50px
-    }
-
-    .ProfilePage .profile-name a {
-        padding: 5px 15px;
-        color: #6d6d6d;
-        font-size: 17px;
-        text-decoration: none;
-        text-transform: uppercase;
-        border: 1px solid #6d6d6d;
-        transition: all .3s ease
-    }
-
-        .ProfilePage .profile-name a:hover {
-            color: #fff;
-            border: 1px solid #fff
-        }
-
-    .ProfilePage .wrapper {
-        margin: 100px 0;
-        text-align: center
-    }
-
-    .ProfilePage .profile {
-        width: 150px
-    }
-
-    .ProfilePage .profile-wrap {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 800px;
-        margin: 50px auto
-    }
-
-    .ProfilePage .profile-icon {
-        width: 150px;
-        height: 150px;
-        border: 6px solid #1f1f1f;
-        transition: all .3s ease;
-        box-sizing: content-box
-    }
-
-    .ProfilePage .profile-name {
-        margin: 30px 0;
-        line-height: 1.25em;
-        transition: all .3s ease
-    }
-
-    .ProfilePage .profile:hover .profile-icon {
-        border: 6px solid #fff
-    }
-
-    .ProfilePage .profile:hover .profile-name {
-        color: #fff
-    }
-
-@keyframes fade-in {
-    0% {
-        opacity: 0;
-        transform: scale(1.2)
-    }
-
-    to {
-        opacity: 1;
-        transform: scale(1)
-    }
-}
-
-@keyframes raise {
-    0% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    10% {
-        transform: translateY(-10px) rotate(5deg)
-    }
-
-    20% {
-        transform: translateY(-10px) rotate(5deg)
-    }
-
-    25% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    to {
-        transform: translateY(0)
-    }
-}
-
-@keyframes tilt {
-    0% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    10% {
-        transform: translateY(-2px) rotate(5deg)
-    }
-
-    20% {
-        transform: translateY(-2px) rotate(5deg)
-    }
-
-    25% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    to {
-        transform: translateY(0)
-    }
-}
-
-@keyframes mustache {
-    20% {
-        transform: translateY(0) scale(1)
-    }
-
-    30% {
-        transform: translateY(4px) rotate(-3deg) scale(1.03)
-    }
-
-    40% {
-        transform: translateY(0) scale(1)
-    }
-}
-
-@keyframes side-to-side {
-    0% {
-        transform: translateX(0)
-    }
-
-    5% {
-        transform: translateX(-5px)
-    }
-
-    10% {
-        transform: translateX(-5px)
-    }
-
-    20% {
-        transform: translateX(5px)
-    }
-
-    25% {
-        transform: translateX(5px)
-    }
-
-    35% {
-        transform: translateX(-5px)
-    }
-
-    40% {
-        transform: translateX(-5px)
-    }
-
-    45% {
-        transform: translateX(0)
-    }
-}
-
-@keyframes wide-open {
-    0% {
-        opacity: 0
-    }
-
-    40% {
-        opacity: 0;
-        transform: scaleY(0)
-    }
-
-    42% {
-        opacity: 1;
-        transform: scale(1)
-    }
-
-    to {
-        opacity: 1;
-        transform: scale(1)
-    }
-}
-
-@keyframes chew {
-    0% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    2% {
-        transform: translateY(3px) rotate(-3deg)
-    }
-
-    4% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    6% {
-        transform: translateY(3px) rotate(-3deg)
-    }
-
-    8% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    10% {
-        transform: translateY(3px) rotate(-3deg)
-    }
-
-    12% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    14% {
-        transform: translateY(3px) rotate(0deg)
-    }
-
-    18% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    26% {
-        transform: translateY(15px)
-    }
-
-    78% {
-        transform: translateY(15px)
-    }
-
-    80% {
-        transform: translateY(0) rotate(0deg)
-    }
-
-    to {
-        transform: translateY(0) rotate(0deg)
-    }
-}
-
-@keyframes hair {
-    0% {
-        transform: scale(1)
-    }
-
-    50% {
-        transform: scaleY(.8)
-    }
-
-    to {
-        transform: scale(1)
-    }
-}
-
-@keyframes bg-fade {
-    0% {
-        background: #86a546
-    }
-
-    40% {
-        background: #86a546
-    }
-
-    45% {
-        background: #e09927
-    }
-
-    55% {
-        background: #e09927
-    }
-
-    60% {
-        background: #86a546
-    }
-}
-
-.AccountSwitcher .profile .profile1 #left-brow {
-    transform-origin: center 80%;
-    animation: raise 10s ease-in-out infinite
-}
-
-.AccountSwitcher .profile .profile1 #sunglasses {
-    transform-origin: center 100%;
-    animation: tilt 10s ease .25s infinite
-}
-
-.AccountSwitcher .profile .profile1 #mustache {
-    transform-origin: center 90%;
-    animation: mustache 10s ease 0ms infinite
-}
-
-.AccountSwitcher .profile .profile2 #left-pupil, .AccountSwitcher .profile .profile2 #right-pupil {
-    animation: side-to-side 10s ease-in-out infinite alternate
-}
-
-.AccountSwitcher .profile .profile2 #left-eye-top, .AccountSwitcher .profile .profile2 #right-eye-top {
-    transform-origin: center bottom;
-    animation: wide-open 10s ease-in-out infinite alternate
-}
-
-.AccountSwitcher .profile .profile2 #bottom-beak, .AccountSwitcher .profile .profile2 #gillard {
-    transform-origin: center top;
-    animation: chew 20s ease-in-out infinite
-}
-
-.AccountSwitcher .profile .profile2 #hair {
-    animation: hair 4s ease infinite alternate
-}
-
-.AccountSwitcher .profile .profile3 svg {
-    animation: bg-fade 10s ease infinite
-}
-
-    .AccountSwitcher .profile .profile3 svg #smile {
-        width: 100px
-    }
-
-.LogoutButton {
-    padding: 5px 15px;
-    color: #6d6d6d;
-    font-size: 17px;
-    text-decoration: none !important;
-    text-transform: uppercase;
-    border: 1px solid #6d6d6d;
-    transition: all .3s ease
-}
-
-    .LogoutButton:hover {
-        color: #fff;
-        border: 1px solid #fff
-    }
-
-.Search {
-    pointer-events: none;
-    float: right
-}
-
-    .Search input {
-        font-family: Lato,sans-serif;
-        font-weight: 300;
-        font-size: 14px;
-        height: 37px;
-        width: 20vw;
-        background: transparent;
-        color: #fff;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        border: 0;
-        border: 2px solid rgba(245,245,241,.1);
-        outline: none;
-        border-radius: 37px;
-        padding: 0 10px;
-        pointer-events: all;
-        -webkit-transition: border .25s ease,width .125s ease .125s;
-        transition: border .25s ease,width .125s ease .125s
-    }
-
-        .Search input:focus {
-            border: 2px solid #e50914;
-            width: 25vw
-        }
-
-.SearchResults {
-    position: relative;
-    top: 50px;
-    max-width: 70vw;
-    z-index: 99
-}
-
-    .SearchResults .TitleList {
-        padding: 3rem 2rem;
-        background-color: rgba(26,26,26,.4117647058823529);
-        backdrop-filter: blur(10px);
-        border-radius: 1rem
-    }
-
-        .SearchResults .TitleList .titles-wrapper {
-            max-width: 50vw
-        }
-
-.TitleList {
-    padding: 20px 40px;
-    box-sizing: border-box;
-    -webkit-transition: opacity 3s ease;
-    transition: opacity 3s ease;
-    opacity: 0;
-    position: relative;
-    z-index: 4
-}
-
-    .TitleList .titles-wrapper {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        margin: 20px 0;
-        width: calc(100vw - 80px);
-        box-sizing: border-box;
-        -webkit-box-pack: justify;
-        -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-        justify-content: space-between
-    }
-
-    .TitleList[data-loaded=true] {
-        opacity: 1;
-        display: ""
-    }
-
-    .TitleList[data-loaded=false] {
-        display: none
-    }
+﻿
